# fadelang-compiler-rs

./: Cargo.toml
src/: cli.rs  compiler.rs  lexer.rs  main.rs  token.rs
src/cli/: mod.rs
src/compiler/: error.rs  keywords.rs  lexer.rs  mod.rs  operators.rs
src/compiler/lexer/: comments.rs  identifiers.rs  mod.rs  number.rs  operators.rs  parentheses.rs  whitespace.rs
src/err/: mod.rs
src/lexer/: mod.rs  num.rs
