[package]
name = "fadelang-compiler"
version = "0.1.0"
edition = "2021"

description = "Fadelang Compiler"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fadelang/fadelang-compiler-rs"

keywords = ["fadelang"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.15", features = ["derive"] }
