[package]
name = "luft"
version = "0.1.0"
edition = "2021"

authors = ["fade <truefadeoffical@gmail.com>"]

description = "Luft Build Tool"
documentation = "https://luftlang.github.io/"
readme = "README.md"

license = "MIT"
repository = "https://github.com/luftlang/luft"

keywords = ["luftlang", "luft"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
